<resources>
    <string name="app_name">DotaTeamsInfo</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="list_of_team_tex_view">List of team\'s</string>
    <string name="wins_tv">Wins:</string>
    <string name="losses_tv">Losses:</string>
    <string name="rating_tv">Rating:</string>
    <string name="nickname_tv">Nickname:</string>
    <string name="games_tv">Games:</string>
    <string name="wins_player_tv">Wins:</string>
    <string name="is_in_the_team_now_tv">Is in the team now:</string>
    <string name="account_name">Name:</string>
    <string name="country_code">Country code:</string>
    <string name="solo_mmr">Solo MMR:</string>
</resources>
